--- a/views/StudentPage.html
+++ b/views/StudentPage.html
@@ -9,39 +9,88 @@
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-	<link rel="stylesheet" href="../app/css/style.css">
+	<link rel="stylesheet" href="../css/StudentStyle.css">
 	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/3.4.0/firebase.js"></script>
 </head>
 
 <body>
-
+	<!-- Navigation bar start -->
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-md-12">
 				
 				<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-					<div class="collapse navbar-collapse">
-						<ul class="nav navbar-nav">
-							<li>
-								<img src="../app/img/Profile_Picture_Placeholder.png" alt="You!" class="center-block" id="profilepicture">
-							</li>
-							<li>
-								<p id="profilename">First last</p>
-							</li>
-							<li class="active">
-								<a href="#">Link 1</a>
-							</li>
-							<li>
-								<a href="#">Link 2</a>
-							</li>
-						</ul>
-					</div>
-				</nav>
 
+					<div class="navbar-header">
+						<span class="navbar-brand" href="#"><img src="../img/profile.png" alt="You!" id="profile-picture"></span>
+					</div>
+
+					<ul class="nav navbar-nav navbar-left">
+						<li><a>Adam Leung</a></li>
+						<li><a><span class="glyphicon glyphicon-star" aria-hidden="true"></span></a></li>
+						<li><a>30 Stars</a></li>
+						<li><a><span class="glyphicon glyphicon-piggy-bank" aria-hidden="true"></span></a></li>
+						<li><a>200 Points</a></li>
+					</ul>
+
+					<ul class="nav navbar-nav navbar-right">
+						<li class="active"><a href="#">Rewards</a></li>
+						<li><a href="#">Achievements</a></li>
+						<li><a href="#">Tasks</a></li>
+						<li><a href="#">Logout</a></li>
+					</ul>
+				</nav>
 			</div>
 		</div>
 	</div>
+	<!-- Navigation bar end -->
+
+	<!-- Content begins -->
+
+	<!-- Rewards begins-->
+<!-- 	<div class="container-fluid content">
+		<div class="row" id="reward">
+			<span class="col-md-2">
+				<span class="horizontal-center"><img src="../img/pizza.png" id="reward-picture"></span>
+			</span>
+			<span class="col-md-8">
+				<span class="row">
+					<span id="reward-title">Pizza</span>
+				</span>
+				<span class="row">
+					<span id="reward-cost"><span class="glyphicon glyphicon-piggy-bank" aria-hidden="true"></span> 200 Points</span>
+				</span>
+
+			</span>
+			<span class="col-md-2">
+				<span class="row">
+					<button id="reward-purchase-button">
+						<span class="horizontal-center"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span></span>
+					</button>
+				</span>
+			</span>
+		</div>
+	</div> -->
+	<!-- Rewards ends -->
+	<div class="container-fluid content">
+		<div class="row">
+			<div class="col-md-4 achieved">
+				<img src="../img/pizza.png" id="achievement-picture">
+				<b id="achievement-title">Name of Achievement</b>
+			</div>
+			<div class="col-md-4 not-achieved">
+				<img src="../img/question.png" id="achievement-picture">
+				<b id="achievement-title">Name of Achievement</b>
+			</div>
+			<div class="col-md-4 not-achieved">
+				<img src="../img/question.png" id="achievement-picture">
+				<b id="achievement-title">Name of Achievement</b>
+			</div>
+		</div>
+	</div>
+	<!-- Achievements begins-->
+	<!-- Achievements begins-->
 </body>
 
