--- a/views/index.html
+++ b/views/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../css/index.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-		  integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
 	<!-- 1. Load libraries -->
 	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
@@ -21,37 +21,37 @@
 	<script src="node_modules/@angular/compiler/bundles/compiler.umd.js"></script>
 	<script src="node_modules/@angular/platform-browser/bundles/platform-browser.umd.js"></script>
 	<script src="node_modules/@angular/platform-browser-dynamic/bundles/platform-browser-dynamic.umd.js"></script>
-	-->
+-->
 
-	<title>PointsAndMe</title>
-    
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<title>PointsAndMe</title>
 
-    <!-- Our Style Sheets -->
-    <link rel="stylesheet" href="../css/index.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    
-    <!-- JQuery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-    <!-- Firebase -->
-    <script src="https://www.gstatic.com/firebasejs/3.4.0/firebase.js"></script>
-	<!-- Latest compiled and minified JavaScript -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
-			integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-	<!-- 2. Load our 'modules' -->
-	<script src="../app/app.module.js"></script>
-	<script src='../app/controllers/mainController.js'></script>
-	<script src="../app/controllers/authenticateFirebase.js"></script>
-    <!-- 2. Load our 'modules' -->
-    <script src="../node_modules/angular/angular.js"></script>
-    <script src="../node_modules/angular-route/angular-route.js"></script>
-    <script src="../app/app.module.js"></script>
-    <script src="../app/app.routes.js"></script>
-    <script src='../app/controllers/mainController.js'></script>
-    <script src="../app/controllers/authenticateFirebase.js"></script>
+<!-- Our Style Sheets -->
+<link rel="stylesheet" href="../css/index.css">
+
+<!-- Bootstrap -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+<!-- JQuery -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+<!-- Firebase -->
+<script src="https://www.gstatic.com/firebasejs/3.4.0/firebase.js"></script>
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<!-- 2. Load our 'modules' -->
+<script src="../app/app.module.js"></script>
+<script src='../app/controllers/mainController.js'></script>
+<script src="../app/controllers/authenticateFirebase.js"></script>
+<!-- 2. Load our 'modules' -->
+<script src="../node_modules/angular/angular.js"></script>
+<script src="../node_modules/angular-route/angular-route.js"></script>
+<script src="../app/app.module.js"></script>
+<script src="../app/app.routes.js"></script>
+<script src='../app/controllers/mainController.js'></script>
+<script src="../app/controllers/authenticateFirebase.js"></script>
 </head>
 
 <!-- 3. Display the application -->
@@ -61,24 +61,38 @@
 			<img src="../img/Logo.png">
 			<br>Welcome,
 		</div>
-		<div class="login-form">
-			<div ng-if="initial">
-				<button id="teacher" class="btn btn-primary" ng-click="userType('teacher')">I'm a Teacher</button>
-				<button id="student" class="btn btn-primary" ng-click="userType('student')">I'm a Student</button>
-				<button id="register" class="btn btn-primary" ng-click="">Register</button>
+
+		<div class="container-fluid">
+			<div class="row">
+				
+				<div class="col-md-4">
+				</div>
+
+				<div class="col-md-4">
+					<div id="login-form">
+						<div ng-if="initial">
+							<button id="teacher" class="btn btn-primary" ng-click="userType('teacher')">I'm a Teacher</button>
+							<button id="student" class="btn btn-primary" ng-click="userType('student')">I'm a Student</button>
+							<button id="register" class="btn btn-primary" ng-click="">Register</button>
+						</div>
+						<form ng-if="isTeacher || isStudent">
+							<div class="input-group">
+								<input type="text" id="username" placeholder="Username" class="text-center">
+							</div>
+							<div class="input-group">
+								<input type="password" id="password" placeholder="Password" class="text-center">
+							</div>
+							<button id="backToHome" class="login btn btn-primary" ng-click="userType('goBack')">Go Back</button>
+							<button ng-controller="authenticateCtrl" id="Submit" class="login btn btn-primary" ng-click="authenticate()">Login</button>
+						</form>
+					</div>	
+
+				</div>
+
+				<div class="col-md-4">
+				</div>
+			
 			</div>
-			<form ng-if="isTeacher || isStudent">
-			<div class="input-group">
-				<label class="login">Username: </label>
-				<input type="text" id="username" class="login form-control">
-			</div>
-			<div class="input-group">
-				<label class="login">Password: </label>
-				<input id="password" class="login form-control">
-			</div>
-			<button id="backToHome" class="login btn btn-primary" ng-click="userType('goBack')">Go Back</button>
-				<button ng-controller="authenticateCtrl" id="Submit" class="login btn btn-primary" ng-click="authenticate()">Login</button>
-			</form>
 		</div>
 	</div>
 </body>
