--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -1,4 +1,8 @@
+<html>
+<head>
 
+</head>
+<body>
 <div class="container" ng-app="myApp" ng-controller="myCtrl">
     <div class="page-header">
         <h1>Welcome to Points and Me!</h1>
@@ -8,4 +12,5 @@
 
     </div>
     </div>
-
+</body>
+</html>
