making stuff work

--- a/views/StudentPage.html
+++ b/views/StudentPage.html
@@ -17,7 +17,7 @@
 
 <body>
 	<!-- Navigation bar start -->
-	<div class="container-fluid"  ng-app="myApp"  ng-controller="studentCtrl">
+	<div class="container-fluid">
 		<div class="row">
 			<div class="col-md-12">
 				
