--- a/views/index.html
+++ b/views/index.html
@@ -52,12 +52,13 @@ integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7T
 <script src="../app/app.routes.js"></script>
 <script src='../app/controllers/mainController.js'></script>
 <script src="../app/controllers/authenticateFirebase.js"></script>
+<script src="../app/controllers/studentController.js"></script>
 </head>
 
 <!-- 3. Display the application -->
 <body>
 
-<div class="container" ng-app="myApp" ng-controller="myCtrl">
+<div class="container"   ng-app="myApp">
 	<div ng-view></div>
 </div>
 </body>
