--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -3,7 +3,7 @@
 
 </head>
 <body>
-<div class="container" ng-app="myApp" ng-controller="myCtrl">
+<div class="container">
     <div class="page-header">
         <h1>Welcome to Points and Me!</h1>
     </div>
