Data target to make bootstrap play nice with angular

--- a/views/StudentPage.html
+++ b/views/StudentPage.html
@@ -38,10 +38,10 @@
 					</ul>
 
 					<ul class="nav navbar-nav navbar-right">
-						<li class="active"><a data-toggle="tab" href="#rewards">Rewards</a></li>
-						<li><a data-toggle="tab" href="#achievements">Achievements</a></li>
+						<li class="active"><a data-toggle="tab" data-target="#rewards">Rewards</a></li>
+						<li><a data-toggle="tab" data-target="#achievements">Achievements</a></li>
 						<!-- <li><a data-toggle="tab" href="#">Tasks</a></li> -->
-						<li><a data-toggle="tab" href="#">Logout</a></li>
+						<li><a data-toggle="tab" data-target="#">Logout</a></li>
 					</ul>
 				</nav>
 			</div>
