Move intit of firebase to work on reload

--- a/views/index.html
+++ b/views/index.html
@@ -53,6 +53,16 @@ integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7T
 <script src='../app/controllers/mainController.js'></script>
 <script src="../app/controllers/authenticateFirebase.js"></script>
 <script src="../app/controllers/studentController.js"></script>
+<script>
+	// Initialize Firebase
+var config = {
+	apiKey: "AIzaSyD-WUhW3_jInlUPmMxV7EInTxx17C0Ba74",
+	authDomain: "pointsandme.firebaseapp.com",
+	databaseURL: "https://pointsandme.firebaseio.com",
+	storageBucket: "pointsandme.appspot.com",
+	messagingSenderId: "48621216513"
+};
+firebase.initializeApp(config);</script>
 </head>
 
 <!-- 3. Display the application -->
