--- a/views/StudentPage.html
+++ b/views/StudentPage.html
@@ -34,7 +34,7 @@
 						<li><a><span class="glyphicon glyphicon-star" aria-hidden="true"></span></a></li>
 						<li><a>30 Stars</a></li>
 						<li><a><span class="glyphicon glyphicon-piggy-bank" aria-hidden="true"></span></a></li>
-						<li><a>200 Points</a></li>
+						<li><a>{{Points}} Points</a></li>
 					</ul>
 
 					<ul class="nav navbar-nav navbar-right">
