--- a/views/indexContent.html
+++ b/views/indexContent.html
@@ -1,7 +1,7 @@
 
 		<div class="page-header">
 			<img src="../img/Logo.png">
-			<br>Welcome,
+			<br>Welcome!
 		</div>
 
 		<div class="container-fluid">
@@ -24,8 +24,8 @@
 							<div class="input-group">
 								<input type="password" id="password" placeholder="Password" class="text-center">
 							</div>
-							<button id="backToHome" class="login btn btn-primary" ng-click="userType('goBack')">Go Back</button>
-							<button ng-controller="authenticateCtrl" id="Submit" class="login btn btn-primary" ng-click="authenticate()">Login</button>
+							<button type="button" id="backToHome" class="login btn btn-primary" ng-click="userType('goBack')">Go Back</button>
+							<button ng-controller="authenticateCtrl" type="submit" id="Submit" class="login btn btn-primary" ng-click="authenticate()">Login</button>
 						</form>
 					</div>
 
