--- a/views/StudentPage.html
+++ b/views/StudentPage.html
@@ -14,7 +14,7 @@
 	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 	<script src="../app/js/bootstrap.js"></script>
-	<script src="https://www.gstatic.com/firebasejs/3.4.0/firebase.js"></script>
+
 </head>
 
 <body>
@@ -41,7 +41,7 @@
 						<li class="active"><a data-toggle="tab" data-target="#rewards">Rewards</a></li>
 						<li><a data-toggle="tab" data-target="#achievements">Achievements</a></li>
 						<!-- <li><a data-toggle="tab" href="#">Tasks</a></li> -->
-						<li><a data-toggle="tab" data-target="#">Logout</a></li>
+						<li><a data-toggle="tab" ng-click="logout()">Logout</a></li>
 					</ul>
 				</nav>
 			</div>
