--- a/views/StudentPage.html
+++ b/views/StudentPage.html
@@ -32,7 +32,7 @@
 					<ul class="nav navbar-nav nav-tabs navbar-left">
 						<li><a>{{Name}}</a></li>
 						<li><a><span class="glyphicon glyphicon-star" aria-hidden="true"></span></a></li>
-						<li><a>30 Stars</a></li>
+						<li><a>{{Stars}} Stars</a></li>
 						<li><a><span class="glyphicon glyphicon-piggy-bank" aria-hidden="true"></span></a></li>
 						<li><a>{{Points}} Points</a></li>
 					</ul>
