--- a/views/StudentPage.html
+++ b/views/StudentPage.html
@@ -26,7 +26,7 @@
 				<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 
 					<div class="navbar-header">
-						<span class="navbar-brand" href="#"><img src="../img/profile.png" alt="You!" id="profile-picture"></span>
+						<span class="navbar-brand" href="#"><img src="../img/profilePic.png" alt="You!" id="profile-picture"></span>
 					</div>
 
 					<ul class="nav navbar-nav nav-tabs navbar-left">
@@ -73,7 +73,7 @@
 				</span>
 				<span class="col-md-2">
 					<span class="row">
-						<button ng-disabled="Points < x.Points" id="reward-purchase-button">
+						<button ng-disabled="Points < x.Points" id="reward-purchase-button" ng-click="redeem(x.Points, x.Name)">
 							<span class="horizontal-center"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span></span>
 						</button>
 					</span>
