--- a/css/teacherstyle.css
+++ b/css/teacherstyle.css
@@ -1,32 +1,83 @@
-body {
-	padding-top: 50px;
-	color: #959595;
-	}
-	
-h1, h2, h3, h4, h5, h6 {
-	color: black;
-	}
-	
-.feature {
-	background-color: yellowgreen;
-	color: greenyellow;
-	}
-	
-.article-intro {
-    margin-bottom: 25px;
+* {
+	font-family: 'Open Sans', sans-serif;
 }
 
-.footer-blurb {
-    padding: 30px 0;
-    background-color: goldenrod;
-    color: black;
+body {
+	background-color: #ffba3d!important;
 }
-    
-.footer-blurb-item {
-    padding: 30px;
-    }
- 
-.small-print {
-	background-color: #fff;
-	padding: 30px 0;
-}s
+
+.content {
+	position: relative;
+	top: 200px;
+}
+
+.navbar-right li a {
+	line-height: 128px;
+	font-size: 18pt;
+	margin-right: 20px;
+}
+
+.navbar-left li a {
+	line-height: 128px;
+	font-size: 18pt;
+	font-weight: 700;
+}
+
+.horizontal-center {
+	width: 50%;
+	margin: 0 auto; 
+}
+
+.achieved {
+	text-shadow: 0 0 3px #f6ff00;
+}
+
+#profile-picture {
+	max-height: 128px;
+}
+
+#reward {
+	border: 2px solid grey;
+	border-radius: 10px;
+	margin: 15px;
+}
+
+#reward-picture {
+	max-height: 128px;
+	padding: 20px;
+}
+
+#reward-title {
+	font-size: 24pt;
+	font-weight: 600;
+	margin-top: 20px;
+}
+
+#reward-cost {
+	font-size: 18pt;
+	font-weight: 500;
+}
+
+#reward-purchase-button {
+	width: 100%;
+	height: 100px;
+}
+
+#achievement-picture {
+	max-height: 128px;
+	display: block;
+	margin: auto;
+}
+
+#achievement-title {
+	display: block;
+	margin: 10px;
+	text-align: center;
+	font-weight: 700;
+	font-size: 24pt;
+}
+
+#redeem{
+	font-size: 15px;
+	padding-left: 15px;
+}
