--- a/views/index.html
+++ b/views/index.html
@@ -53,6 +53,8 @@ integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7T
 <script src='../app/controllers/mainController.js'></script>
 <script src="../app/controllers/authenticateFirebase.js"></script>
 <script src="../app/controllers/studentController.js"></script>
+<script src="../app/controllers/teacherController.js"></script>
+
 <script>
 	// Initialize Firebase
 var config = {
