--- a/views/TeacherPage.html
+++ b/views/TeacherPage.html
@@ -60,7 +60,7 @@
 							{{x.Email}}
 						</div>
 						<div class="col-md-3">
-							{{x.Points}}
+							{{x.Points}} <input type="button" ng-click="increasePoints(x.Id,5)"  text="points" />
 						</div>
 						<div class="col-md-3">
 							{{x.Stars}}
