Added requested rewards

--- a/views/TeacherPage.html
+++ b/views/TeacherPage.html
@@ -36,6 +36,7 @@
 					<ul class="nav navbar-nav navbar-right">
 						<li class="active"><a data-toggle="tab" data-target=".students">Students</a></li>
 						<li><a data-toggle="tab" data-target="#rewards">Rewards</a></li>
+						<li><a data-toggle="tab" data-target="#rerewards">Requested Rewards</a></li>
 						<li><a data-toggle="tab" data-target="#achievements">Achievements</a></li>
 						<li><a data-toggle="tab" ng-click="logout()">Logout</a></li>
 					</ul>
@@ -109,6 +110,30 @@
 			</div>
 		</div>
 		<!-- Rewards end-->
+
+		<div id="rerewards" class="container-fluid content tab-pane fade">
+			<div class="row" id="rereward">
+				<div class="container-fluid">
+					<div class="row table-headers">
+						<div class="col-md-6 data-cell">
+							Name
+						</div>
+						<div class="col-md-6 data-cell">
+							Points
+						</div>
+					</div>
+					<div class="row" ng-repeat="x in ReRewards">
+						<div class="col-md-6 data-cell">
+							{{x.Name}}
+						</div>
+						<div class="col-md-6 data-cell">
+							{{x.Student}}
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
 
 		<!-- Achievements begins-->
 		<div id="achievements" class="container-fluid content tab-pane fade">
