--- a/views/TeacherPage.html
+++ b/views/TeacherPage.html
@@ -14,7 +14,7 @@
 	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 	<script src="../app/js/bootstrap.js"></script>
-
+	<script src="../app/js/bootstrap.js"></script>
 </head>
 
 <body>
@@ -74,7 +74,7 @@
 							{{x.Email}}
 						</div>
 						<div class="col-md-3 data-cell">
-							{{x.Points}} <input type="button" ng-click="increasePoints(x.Id,5)"  text="points"/>
+							{{x.Points}} <button ng-click="increasePoints(x.Id,5)"/><span class="glyphicon glyphicon-edit" aria-hidden="true"></span></button>
 						</div>
 						<div class="col-md-3 data-cell">
 							{{x.Stars}}
