--- a/views/TeacherPage.html
+++ b/views/TeacherPage.html
@@ -74,7 +74,7 @@
 							{{x.Email}}
 						</div>
 						<div class="col-md-3 data-cell">
-							{{x.Points}} <button ng-click="increasePoints(x.Id)"/><span class="glyphicon glyphicon-edit" aria-hidden="true"></span></button>
+							{{x.Points}} <button ng-click="increasePoints(x.Id)"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span></button>
 						</div>
 						<div class="col-md-3 data-cell">
 							{{x.Stars}}
