Typo fix and comments

--- a/views/TeacherPage.html
+++ b/views/TeacherPage.html
@@ -111,6 +111,7 @@
 		</div>
 		<!-- Rewards end-->
 
+		<!-- Requested Rewards end-->
 		<div id="rerewards" class="container-fluid content tab-pane fade">
 			<div class="row" id="rereward">
 				<div class="container-fluid">
@@ -119,7 +120,7 @@
 							Name
 						</div>
 						<div class="col-md-6 data-cell">
-							Points
+							Student
 						</div>
 					</div>
 					<div class="row" ng-repeat="x in ReRewards">
@@ -133,7 +134,7 @@
 				</div>
 			</div>
 		</div>
-
+		<!-- Requested Rewards end-->
 
 		<!-- Achievements begins-->
 		<div id="achievements" class="container-fluid content tab-pane fade">
