--- a/views/TeacherPage.html
+++ b/views/TeacherPage.html
@@ -128,8 +128,8 @@
 							{{x.Name}}
 						</div>
 						<div class="col-md-6 data-cell">
-							{{x.Student}}
-						</div>
+							{{x.Student}} <button ng-click="requestDone(x.Id)"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span></button>
+                        </div>
 					</div>
 				</div>
 			</div>
