--- a/views/TeacherPage.html
+++ b/views/TeacherPage.html
@@ -26,7 +26,7 @@
 				<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 
 					<div class="navbar-header">
-						<span class="navbar-brand" href="#"><img src="../img/profilePic.png" alt="You!" id="profile-picture"></span>
+						
 					</div>
 
 					<ul class="nav navbar-nav nav-tabs navbar-left">
@@ -128,7 +128,7 @@
 							{{x.Name}}
 						</div>
 						<div class="col-md-6 data-cell">
-							{{x.Student}} <button ng-click="requestDone(x.Id)"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span></button>
+							{{x.Student}} <button ng-click="requestDone(x.Id)"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>
                         </div>
 					</div>
 				</div>
